RESOLVED FIXED200450
RealtimeOutgoingAudioSource::pullAudioData is no longer needed
https://bugs.webkit.org/show_bug.cgi?id=200450
Summary RealtimeOutgoingAudioSource::pullAudioData is no longer needed
youenn fablet
Reported 2019-08-05 15:33:23 PDT
RealtimeOutgoingAudioSource::pullAudioData is no longer needed
Attachments
Patch (3.08 KB, patch)
2019-08-05 15:34 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2019-08-05 15:34:38 PDT
Radar WebKit Bug Importer
Comment 2 2019-08-05 15:48:06 PDT
Geoffrey Garen
Comment 3 2019-08-05 15:56:19 PDT
Comment on attachment 375572 [details] Patch r=me
WebKit Commit Bot
Comment 4 2019-08-05 16:25:51 PDT
Comment on attachment 375572 [details] Patch Clearing flags on attachment: 375572 Committed r248278: <https://trac.webkit.org/changeset/248278>
WebKit Commit Bot
Comment 5 2019-08-05 16:25:53 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.