RealtimeOutgoingAudioSource::pullAudioData is no longer needed https://bugs.webkit.org/show_bug.cgi?id=200450

Reviewed by Geoffrey Garen.

No change of behavior, removing base class method declaration.

* platform/mediastream/RealtimeOutgoingAudioSource.h:
(WebCore::RealtimeOutgoingAudioSource::pullAudioData): Deleted.
* platform/mediastream/gstreamer/RealtimeOutgoingAudioSourceLibWebRTC.h:
* platform/mediastream/mac/RealtimeOutgoingAudioSourceCocoa.h:


Canonical link: https://commits.webkit.org/214216@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248278 268f45cc-cd09-0410-ab3c-d52691b4dbfc